test/end-to-end/compile-errors/type-params-unsupported.crow
main void()
	()

f[t] void() libc extern
ex[t] extern
seq[t] alias
	t[]
e[t] enum(x)
f[t] flags
